--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@ title: Blog
 <ul>
   {% for post in site.posts %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
+	    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+	    {{ post.date | date_to_string }} {{ post.excerpt }}
     </li>
   {% endfor %}
 </ul>
