--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,10 @@ title: Blog
 <h1>Latest Posts</h1>
 
 <ul>
-  {% for post in site.posts %}
-    <li>
-	    <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-	    {{ post.date | date_to_string }} {{ post.excerpt }}
-    </li>
-  {% endfor %}
+	{% for post in site.posts %}
+	<li>
+		<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
+		{{ post.date | date_to_string }} {{ post.excerpt | strip_html }}
+	</li>
+	{% endfor %}
 </ul>
