--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,8 @@ title: Blog
 <ul>
 	{% for post in site.posts %}
 	<li>
-		<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-		{{ post.date | date_to_string }} {{ post.excerpt | strip_html }}
+		<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.date | date_to_string }}: {{ post.title }}</a></h2>
+		 {{ post.excerpt }}
 	</li>
 	{% endfor %}
 </ul>
